[gd_scene load_steps=10 format=3 uid="uid://cph1n44kxx8gh"]

[ext_resource type="PackedScene" uid="uid://dm348461kyxo1" path="res://levels/level.tscn" id="1_7jktm"]
[ext_resource type="Script" uid="uid://d1nq7ivmmjndb" path="res://addons/virtual_joystick/virtual_joystick.gd" id="4_fc0e3"]
[ext_resource type="Texture2D" uid="uid://bopr1aixh4md0" path="res://icon.svg" id="5_7jktm"]
[ext_resource type="PackedScene" uid="uid://6s0bujra3udj" path="res://player/player.tscn" id="5_ryrav"]
[ext_resource type="Script" uid="uid://c1phlwekqhac5" path="res://camera/frontal_camera.gd" id="6_j5wjh"]
[ext_resource type="Script" uid="uid://cbc6r3x84ejtj" path="res://addons/radial_progress/RadialProgress.gd" id="6_ryrav"]
[ext_resource type="PackedScene" uid="uid://ch2rxbl10y8xs" path="res://enemies/zombie/Zombie.tscn" id="7_j5wjh"]
[ext_resource type="Script" uid="uid://b4eddopohv8dj" path="res://enemies/enemy.gd" id="8_vef74"]

[sub_resource type="SphereShape3D" id="SphereShape3D_eow3j"]
radius = 0.2

[node name="world" type="Node3D"]

[node name="Level" parent="." instance=ExtResource("1_7jktm")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.08993728, 0.9959474, 0, -0.9959474, -0.08993728, 0, 6.5525193, 0)
light_energy = 0.366
light_indirect_energy = 0.955
light_specular = 0.544

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VirtualJoystick" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 41.0
offset_top = 377.0
offset_right = 250.0
offset_bottom = 586.0
scale = Vector2(1.087, 1.087)
script = ExtResource("4_fc0e3")
joystick_opacity = 0.445
joystick_border = 4.5
scale_factor = 1.087
stick_opacity = 0.405
metadata/_custom_type_script = "uid://d1nq7ivmmjndb"

[node name="CameraToggle" type="TouchScreenButton" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(989, 302.99997)
scale = Vector2(0.74218655, 0.72656274)
texture_normal = ExtResource("5_7jktm")
visibility_mode = 1

[node name="CameraShot" type="TouchScreenButton" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.5459567, 1, 0.56614816, 1)
position = Vector2(901, 463)
scale = Vector2(0.74218655, 0.72656274)
texture_normal = ExtResource("5_7jktm")
visibility_mode = 1

[node name="CameraFocus" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 597.0
offset_top = 295.0
offset_right = 637.0
offset_bottom = 335.0
script = ExtResource("6_ryrav")
radius = 200.0
bar_color = Color(0.82060444, 0.118108906, 0.26609978, 1)
ring = true
metadata/_custom_type_script = "uid://cbc6r3x84ejtj"

[node name="Player" parent="." node_paths=PackedStringArray("joystick") instance=ExtResource("5_ryrav")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.971527)
joystick = NodePath("../CanvasLayer/VirtualJoystick")

[node name="Cameras" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5663981, 0)

[node name="3d" type="SpringArm3D" parent="Player/Cameras"]
shape = SubResource("SphereShape3D_eow3j")
spring_length = -2.0

[node name="BackCamera" type="Camera3D" parent="Player/Cameras/3d"]
transform = Transform3D(-1, 0, 8.742278e-08, 8.770864e-09, 0.9949545, 0.100326985, -8.6981686e-08, 0.100326985, -0.9949545, 0, 0, -2)

[node name="FrontalCamera" type="Camera3D" parent="Player/Cameras"]
transform = Transform3D(-1, 0, 8.940697e-08, 0, 1, 0, -8.940697e-08, 0, -1, 0, 0.0096383095, 0.16059566)
script = ExtResource("6_j5wjh")

[node name="Enemy" parent="." node_paths=PackedStringArray("player_node") instance=ExtResource("7_j5wjh")]
transform = Transform3D(0.59999996, 0, 0, 0, 0.5999999, 0, 0, 0, 0.59999996, -0.014081955, 0, 5.6853037)
collision_layer = 4
collision_mask = 2
script = ExtResource("8_vef74")
player_node = NodePath("../Player")
speed = 2.0
hurt_duration = 0.6

[connection signal="pressed" from="CanvasLayer/CameraToggle" to="Player" method="_on_camera_toggle_pressed"]
[connection signal="pressed" from="CanvasLayer/CameraShot" to="Player/Cameras/FrontalCamera" method="_on_camera_shot_pressed"]
[connection signal="is_focusing_enemy" from="Player/Cameras/FrontalCamera" to="Player" method="_on_frontal_camera_is_focusing_enemy"]
